--- a/config.json
+++ b/config.json
@@ -20,13 +20,13 @@
     "market": true
   },
   "images" : {
-    "list" : "images/list.png",
+    "list" : "themes/koapp-theme-dark-side/images/list.png",
     "screenshots" : [
-      "images/screenshot01.png",
-      "images/screenshot02.png"
+      "themes/koapp-theme-dark-side/images/screenshot01.png",
+      "themes/koapp-theme-dark-side/images/screenshot02.png"
     ],
-    "popover" : "images/popover.png",
-    "banner" : "images/banner.png"
+    "popover" : "themes/koapp-theme-dark-side/images/popover.png",
+    "banner" : "themes/koapp-theme-dark-side/images/banner.png"
   },
   "defaultConfig": {
     "colors": {
