--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "authors": "Abdón Rodríguez Davila, <thepeer@kingofapp.es>",
+  "authors": "King of App",
   "name": "koapp-theme-dark-side",
   "description": "dark-side theme for King of App",
   "main": "koapp-theme-dark-side.html",
